kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels: 
        component: api
    spec:
      containers:
        - name: api
          image: vantoan11/codetogive2022-api
          ports:
            - containerPort: 80
