kubernetes/wordpress-deployment-nocloudsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    component: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      component: wordpress
  template:
    metadata:
      labels:
        component: wordpress
    spec:
      containers:
        - image: wordpress
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-persistent-volume-claim
