kubernetes/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    component: wordpress
spec:
  selector:
    matchLabels:
      component: wordpress
  template:
    metadata:
      labels:
        component: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
