kubernetes/api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: ClusterIP 
  selector:
    component: api
  ports:
    - port: 80
      targetPort: 80
