kubernetes/mysql-cluster-ip-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: mysql-cluster-ip-service
spec:
  selector:
    component: mysql
  ports:
    - port: 3306
  clusterIP: None
