kubernetes/wordpress-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-node-port
  labels:
    component: wordpress
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    component: wordpress
  type: NodePort
