kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/ssl-services: 'wordpress'
spec:
  tls:
    - secretName: tls-certificate
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip-service
                port:
                  number: 80
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 80
          - path: /wordpress
            pathType: Prefix
            backend:
              service:
                name: wordpress-node-port
                port:
                  number: 80
